[project]
name = "call-me-maybe"
version = "0.1.0"
description = "42 project - function calling with constrained decoding"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.25.0",
    "torch>=2.11.0",
    "huggingface-hub>=1.11.0",
    "transformers>=5.5.4",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy"
]

[tool.flake8]
max-line-length = 79

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
